--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -182,6 +182,14 @@ redirect_from:
                     <input type="number" id="otherReduce" min="0" step="0.1" value="0">
                     <span>%</span>
                 </div>
+                <div class="reduce-input-group windswept-group">
+                    <label>
+                        <input type="checkbox" id="windsweptCheckbox">
+                        <img src="{{ site.baseurl }}/assets/img/persona/속성_질풍.png" alt="질풍" class="windswept-icon">
+                        <span id="windsweptText" class="windswept-text">풍습</span>
+                        <span class="tooltip-icon" id="windsweptTooltip">?</span>
+                    </label>
+                </div>
             </div>
             <div class="defense-table-container">
                 <table class="defense-table">
@@ -288,7 +296,8 @@ redirect_from:
         const tipEls = [
             document.getElementById('penetrateTooltip'),
             document.getElementById('defenseReduceTooltip'),
-            document.getElementById('finalDamageTooltip')
+            document.getElementById('finalDamageTooltip'),
+            document.getElementById('windsweptTooltip')
         ];
         tipEls.forEach(el => { if (el) bindTooltipElement(el); });
     }
