--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -2,8 +2,7 @@
 layout: default
 custom_css: [tactic, tactic-share]
 custom_js: [tooltip, tactic-preview]
-custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js,
-wonder/persona.js, wonder/skills.js]
+custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js, wonder/skills.js]
 permalink: /tactic/tactics.html
 language: kr
 title: 택틱 도서관 - 페르소나5 더 팬텀 X 루페르넷
