--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [defense-calc]
 custom_js: [tooltip, character/character-list, defense/defense-i18n, defense-calc]
-custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js, wonder/persona.js,
+custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
 characters/characters.js]
 permalink: /defense-calc/
 language: kr
@@ -14,6 +14,14 @@ jp: /defense-calc/?lang=jp
 redirect_from:
 - /kr/defense-calc/
 ---
+
+<script src="{{ site.baseurl }}/data/persona/order.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/assets/js/persona-loader.js?v={{ site.time | date: '%s' }}"></script>
+<script>
+  if (typeof ensurePersonaFilesLoaded === 'function') {
+    ensurePersonaFilesLoaded();
+  }
+</script>
 
 {% if page.alternate_urls %}
 <link rel="alternate" hreflang="ko" href="{{ site.url }}/defense-calc/" />
