--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [tactic]
 custom_js: [tooltip, tactic/share, tactic/library-loader, tactic/import, tactic/export,  tactic/setwonder, tactic/setparty, tactic/partyimg, tactic/createAction, tactic/renderTurns, tactic/updateAuto, tactic/findPattern, tactic/capture]
-custom_data: [tooltip.js, tactic/pattern.js, characters/characters.js, revelations/revelations.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
+custom_data: [tooltip.js, tactic/pattern.js, characters/characters.js, revelations/revelations.js, wonder/weapons.js, wonder/skills.js]
 permalink: /tactic/
 language: kr
 title : 택틱 메이커 - 페르소나5 더 팬텀 X 루페르넷
@@ -10,8 +10,14 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
 ---
 {% include supabase-config.html %}
 
-  <!-- 새 페르소나 데이터 번들 (window.personaFiles) -->
-  <script src="{{ site.baseurl }}/data/persona/bundle.persona.js?v={{ site.time | date: '%s' }}"></script>
+  <!-- 페르소나 순서 및 로더 (window.personaFiles 구성) -->
+  <script src="{{ site.baseurl }}/data/persona/order.js?v={{ site.time | date: '%s' }}"></script>
+  <script src="{{ site.baseurl }}/assets/js/persona-loader.js?v={{ site.time | date: '%s' }}"></script>
+  <script>
+    if (typeof ensurePersonaFilesLoaded === 'function') {
+      ensurePersonaFilesLoaded();
+    }
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.11/dist/html-to-image.min.js"></script>
 
