--- a/character/character.html
+++ b/character/character.html
@@ -4,13 +4,21 @@ custom_css: [cha_detail, cha_detail_img, tactic-posts, tactic-share]
 custom_js: [character/cha_detail, tooltip, detail/dot-carousel, marked.min, character/cha_stats,
 character/character-i18n, character/helpmodal]
 custom_data: [characters/characters.js, revelations/revelations.js,
-tooltip.js, wonder/persona.js, wonder/weapons.js]
+tooltip.js, wonder/weapons.js]
 permalink: /character.html
 language: kr
 title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 ---
 
 {% include supabase-config.html %}
+
+<script src="{{ site.baseurl }}/data/persona/order.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/assets/js/persona-loader.js?v={{ site.time | date: '%s' }}"></script>
+<script>
+  if (typeof ensurePersonaFilesLoaded === 'function') {
+    ensurePersonaFilesLoaded();
+  }
+</script>
 
 <div class="main-wrapper">
 
